# personal-aggregator

./: .dockerignore  .env.example  .gitignore  .yamllint.yml  CLAUDE.md  Makefile  README.md  SPEC.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
.takt/: assets-manifest.json  config.yaml  version.json
deploy/: README.md  aggregator  aggregator.service  bootstrap.sh  install.sh
docs/: API.md  openapi.json
scripts/: build-images.sh  run-tests.sh
specs/done/: active-feed-indicator-in-sidebar-and-article-list-header.md  admin-cli.md  admin-profile-commands-and-bulk-rerank.md  article-categorization.md  clustering-tiering-fixes-and-consolidation-curation-pass.md  containerization-and-versioning.md  foundation-schema-and-state-machine.md  incremental-and-memoized-thread-merge-consolidation.md  json-api-for-mobile-and-tui-clients-no-auth.md  larger-article-reading-text-on-small-screens.md  live-ui-refresh-for-new-articles.md  llm-telemetry-via-litellm-custom-logger.md  mcp-management-and-ops-surface.md  mcp-server-for-agent-integration.md  opml-import-and-export.md  processor-service.md  qualitative-unread-markers-and-counts-toggle.md  release-pipeline-and-pi-deployment.md  retriever-service.md  single-grade-relevance-and-grade-driven-thread-surfacing.md  story-thread-clustering-and-prioritization.md  summarize-and-rank-service.md  terminal-ui-tui-reader-client-over-the-json-api.md  today-intelligent-daily-brief.md  unify-sidebar-search-and-add-mark-read-and-next-shortcut.md  web-ui.md  (+2 more)
(+43 files in other folders)
